# github-events-analytics

./: .gitignore  README.md
dagster_project/: .gitignore  pyproject.toml
dagster_project/.dg/: telemetry.yaml
dagster_project/src/dagster_project/defs/: assets.py  resources.py  schedules.py
databases/: init_db.sql
dbt_gh_events/: .gitignore  dbt_project.yml  main.py  pyproject.toml
dbt_gh_events/models/staging/: _sources.yml  _staging__models.yml  _staging_models.yml  stg_all_events.sql
