[project]
name = "dagster_project"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.0",
    "dagster-dg-cli>=1.13.0",
    "dagster-duckdb>=0.29.0",
    "dagster-gcp>=0.29.0",
    "dagster-webserver>=1.13.0",
    "google-cloud-bigquery>=3.41.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
registry_modules = [
    "dagster_project.components.*",
]


